--- a/app/styles/ember-theater/components/ember-theater/_director.scss
+++ b/app/styles/ember-theater/components/ember-theater/_director.scss
@@ -1,6 +1,6 @@
 @import "director/backdrop";
 @import "director/character";
-@import "director/choice";
+@import "director/menu";
 @import "director/scene-window";
 @import "director/text";
 @import "director/code-challange";
