--- a/app/styles/ember-theater/variables/schemes/decorative/_coastal.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_coastal.scss
@@ -19,14 +19,14 @@ $et-input-coastal-border-style: $et-button-coastal-border-style !default;
 
 $et-input-coastal-focus-border-color: $et-coastal-highlight-color !default;
 
-// choice
-$et-choice-coastal-background-color: $et-coastal-secondary-color !default;
-$et-choice-coastal-opacity: $et-choice-opacity !default;
+// menu
+$et-menu-coastal-background-color: $et-coastal-secondary-color !default;
+$et-menu-coastal-opacity: $et-menu-opacity !default;
 
-$et-choice-header-coastal-font-family: $et-choice-header-font-family !default;
+$et-menu-header-coastal-font-family: $et-menu-header-font-family !default;
 
-$et-choice-option-coastal-font-weight: $et-choice-option-font-weight !default;
-$et-choice-option-coastal-font-family: $et-choice-option-font-family !default;
+$et-menu-option-coastal-font-weight: $et-menu-option-font-weight !default;
+$et-menu-option-coastal-font-family: $et-menu-option-font-family !default;
 
 // text
 $et-text-coastal-opacity: $et-text-opacity !default;
