--- a/app/styles/ember-theater/variables/schemes/decorative/_ember.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_ember.scss
@@ -20,14 +20,14 @@ $et-input-ember-border-style: $et-button-ember-border-style !default;
 
 $et-input-ember-focus-border-color: $et-ember-highlight-color !default;
 
-// choice
-$et-choice-ember-background-color: $et-ember-secondary-color !default;
-$et-choice-ember-opacity: $et-choice-opacity !default;
+// menu
+$et-menu-ember-background-color: $et-ember-secondary-color !default;
+$et-menu-ember-opacity: $et-menu-opacity !default;
 
-$et-choice-header-ember-font-family: $et-choice-header-font-family !default;
+$et-menu-header-ember-font-family: $et-menu-header-font-family !default;
 
-$et-choice-option-ember-font-weight: $et-choice-option-font-weight !default;
-$et-choice-option-ember-font-family: $et-choice-option-font-family !default;
+$et-menu-option-ember-font-weight: $et-menu-option-font-weight !default;
+$et-menu-option-ember-font-family: $et-menu-option-font-family !default;
 
 // ember
 $et-text-ember-opacity: $et-text-opacity !default;
