--- a/app/styles/ember-theater/variables/schemes/decorative/_paper.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_paper.scss
@@ -22,15 +22,15 @@ $et-input-paper-border-style: $et-button-paper-border-style !default;
 
 $et-input-paper-focus-border-color: $et-paper-secondary-color !default;
 
-// choice
-$et-choice-paper-background-color: $et-paper-primary-color !default;
-$et-choice-paper-opacity: $et-choice-opacity !default;
+// menu
+$et-menu-paper-background-color: $et-paper-primary-color !default;
+$et-menu-paper-opacity: $et-menu-opacity !default;
 
-$et-choice-header-paper-font-family: $et-choice-header-font-family !default;
-$et-choice-header-paper-color: $et-paper-secondary-color !default;
+$et-menu-header-paper-font-family: $et-menu-header-font-family !default;
+$et-menu-header-paper-color: $et-paper-secondary-color !default;
 
-$et-choice-option-paper-font-weight: $et-choice-option-font-weight !default;
-$et-choice-option-paper-font-family: $et-choice-option-font-family !default;
+$et-menu-option-paper-font-weight: $et-menu-option-font-weight !default;
+$et-menu-option-paper-font-family: $et-menu-option-font-family !default;
 
 // text
 $et-text-paper-opacity: $et-text-opacity !default;
