--- a/app/styles/ember-theater/variables/schemes/decorative/_transparent.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_transparent.scss
@@ -20,15 +20,15 @@ $et-input-transparent-border-style: $et-button-transparent-border-style !default
 
 $et-input-transparent-focus-border-color: $et-transparent-highlight-color !default;
 
-// choice
-$et-choice-transparent-background-color: $et-transparent-primary-color !default;
-$et-choice-transparent-opacity: $et-choice-opacity !default;
+// menu
+$et-menu-transparent-background-color: $et-transparent-primary-color !default;
+$et-menu-transparent-opacity: $et-menu-opacity !default;
 
-$et-choice-header-transparent-font-family: $et-choice-header-font-family !default;
-$et-choice-header-transparent-color: $et-transparent-neutral-color !default;
+$et-menu-header-transparent-font-family: $et-menu-header-font-family !default;
+$et-menu-header-transparent-color: $et-transparent-neutral-color !default;
 
-$et-choice-option-transparent-font-weight: $et-choice-option-font-weight !default;
-$et-choice-option-transparent-font-family: $et-choice-option-font-family !default;
+$et-menu-option-transparent-font-weight: $et-menu-option-font-weight !default;
+$et-menu-option-transparent-font-family: $et-menu-option-font-family !default;
 
 // transparent
 $et-text-transparent-opacity: $et-text-opacity !default;
