--- a/app/styles/ember-theater/variables/schemes/structural/_full.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_full.scss
@@ -1,17 +1,17 @@
 $et-full-padding: 19%;
 
-// choice
-$et-choice-full-padding: $et-choice-padding !default;
-$et-choice-full-border-width: $et-choice-border-width !default;
-$et-choice-full-border-radius: $et-default-border-radius !default;
+// menu
+$et-menu-full-padding: $et-menu-padding !default;
+$et-menu-full-border-width: $et-menu-border-width !default;
+$et-menu-full-border-radius: $et-default-border-radius !default;
 
-$et-choice-header-full-font-size: $et-choice-header-font-size !default;
-$et-choice-header-full-margin-bottom: $et-choice-header-margin-bottom !default;
+$et-menu-header-full-font-size: $et-menu-header-font-size !default;
+$et-menu-header-full-margin-bottom: $et-menu-header-margin-bottom !default;
 
-$et-choice-option-full-font-size: $et-choice-option-font-size !default;
-$et-choice-option-full-margin-bottom: $et-choice-option-margin-bottom !default;
-$et-choice-option-full-width: $et-choice-option-width !default;
-$et-choice-option-full-border-width: $et-choice-border-width !default;
+$et-menu-option-full-font-size: $et-menu-option-font-size !default;
+$et-menu-option-full-margin-bottom: $et-menu-option-margin-bottom !default;
+$et-menu-option-full-width: $et-menu-option-width !default;
+$et-menu-option-full-border-width: $et-menu-border-width !default;
 
 // text
 $et-text-full-padding: $et-text-padding-base !default;
