--- a/app/styles/ember-theater/variables/_components.scss
+++ b/app/styles/ember-theater/variables/_components.scss
@@ -1,5 +1,5 @@
 @import "components/curtain";
-@import "components/choice";
+@import "components/menu";
 @import "components/menu-bar";
 @import "components/scene-window";
 @import "components/text";
