--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -3,11 +3,11 @@
     {{#if theater.isLoaded}}
       {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
       {{#ember-theater/menu-bar theaterId=theater.theaterId as |menuBar|}}
-        {{ember-theater/menu-bar/rewind theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-        {{ember-theater/menu-bar/save theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-        {{ember-theater/menu-bar/load theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-        {{ember-theater/menu-bar/reset theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-        {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+        {{ember-theater/menu-bar/rewind theaterId=menuBar.theaterId}}
+        {{ember-theater/menu-bar/save theaterId=menuBar.theaterId}}
+        {{ember-theater/menu-bar/load theaterId=menuBar.theaterId}}
+        {{ember-theater/menu-bar/reset theaterId=menuBar.theaterId}}
+        {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId}}
       {{/ember-theater/menu-bar}}
     {{else}}
       {{ember-theater/curtain theaterId=theater.theaterId filesToPreload="backdrops:src" completePreload=theater.completePreload}}
@@ -18,11 +18,11 @@
   {{#ember-theater theaterId="theater2" fixtures=fixtures isFocused=true as |theater|}}
     {{ember-theater/director theaterId=theater.theaterId initialScene="demo"}}
     {{#ember-theater/menu-bar theaterId=theater.theaterId as |menuBar|}}
-      {{ember-theater/menu-bar/rewind theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-      {{ember-theater/menu-bar/save theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-      {{ember-theater/menu-bar/load theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-      {{ember-theater/menu-bar/reset theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
-      {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId openMenu=menuBar.openMenu}}
+      {{ember-theater/menu-bar/rewind theaterId=menuBar.theaterId}}
+      {{ember-theater/menu-bar/save theaterId=menuBar.theaterId}}
+      {{ember-theater/menu-bar/load theaterId=menuBar.theaterId}}
+      {{ember-theater/menu-bar/reset theaterId=menuBar.theaterId}}
+      {{ember-theater/menu-bar/resize theaterId=menuBar.theaterId}}
     {{/ember-theater/menu-bar}}
   {{/ember-theater}}
 </div>
