expose text rate

--- a/app/styles/ember-theater/variables/components/_text.scss
+++ b/app/styles/ember-theater/variables/components/_text.scss
@@ -4,7 +4,7 @@ $et-text-border-width: $et-default-border-width !default;
 $et-text-opacity: $et-semi-transparency !default;
 $et-text-font-family: $et-primary-serif !default;
 $et-text-font-size: $et-default-font-size !default;
-$et-text-text-align: justify !default;
+$et-text-text-align: left !default;
 
 $et-text-caption-font-family: $et-primary-sans-serif !default;
 $et-text-caption-font-size: $et-tiny-font-size !default;
