--- a/app/styles/ember-theater/variables/components/_scene-window.scss
+++ b/app/styles/ember-theater/variables/components/_scene-window.scss
@@ -11,6 +11,12 @@ $et-scene-window-main-center-percentage-right: $et-scene-window-main-center-perc
 $et-scene-window-main-center-percentage-bottom: $et-scene-window-main-center-percentage !default;
 $et-scene-window-main-center-percentage-left: $et-scene-window-main-center-percentage !default;
 
+$et-scene-window-main-center-large-percentage: 9.5% !default;
+$et-scene-window-main-center-large-percentage-top: $et-scene-window-main-center-large-percentage !default;
+$et-scene-window-main-center-large-percentage-right: $et-scene-window-main-center-large-percentage !default;
+$et-scene-window-main-center-large-percentage-bottom: $et-scene-window-main-center-large-percentage !default;
+$et-scene-window-main-center-large-percentage-left: $et-scene-window-main-center-large-percentage !default;
+
 $et-scene-window-main-background-dark: $et-scene-window-dark !default;
 $et-scene-window-main-background-light: $et-scene-window-light !default;
 $et-scene-window-main-shadow-dark: 0 0 100px $et-scene-window-dark !default;
