--- a/app/styles/ember-theater/components/ember-theater/director/_menu.scss
+++ b/app/styles/ember-theater/components/ember-theater/director/_menu.scss
@@ -52,3 +52,11 @@ $et-menu-included: true;
     }
   }
 }
+
+.et-text-menu {
+  position: relative;
+
+  .et-menu {
+    position: relative;
+  }
+}
