--- a/app/styles/ember-theater/variables/schemes/structural/_wide.scss
+++ b/app/styles/ember-theater/variables/schemes/structural/_wide.scss
@@ -18,3 +18,6 @@ $et-text-caption-wide-side: $et-text-wide-padding-base !default;
 $et-text-caption-wide-padding-ends: 0 !default;
 $et-text-caption-wide-padding-sides: $et-text-wide-padding-base !default;
 $et-text-caption-wide-border-radius: $et-text-wide-border-radius * 0.7 !default;
+
+// text-menu
+$et-text-menu-wide-margin-top: $et-text-wide-line-height !default;
