make characters and backdrops unselectable

--- a/app/styles/ember-theater/_mixins.scss
+++ b/app/styles/ember-theater/_mixins.scss
@@ -3,3 +3,5 @@
 @import "mixins/hidden";
 @import "mixins/input";
 @import "mixins/sr-only";
+@import "mixins/undraggable";
+@import "mixins/unselectable";
