--- a/app/styles/ember-theater/components/_ember-theater.scss
+++ b/app/styles/ember-theater/components/_ember-theater.scss
@@ -5,7 +5,8 @@
 
 .ember-theater {
   @extend .et-full-screen;
-  
+  @extend .et-undraggable;
+
   background-color: $et-blank-screen-background-color;
   font-family: $et-primary-font-family;
 
