better text highlight

--- a/app/styles/ember-theater/_mixins.scss
+++ b/app/styles/ember-theater/_mixins.scss
@@ -1,6 +1,7 @@
 @import "mixins/button";
 @import "mixins/full-screen";
 @import "mixins/hidden";
+@import "mixins/highlight";
 @import "mixins/input";
 @import "mixins/sr-only";
 @import "mixins/undraggable";
