--- a/app/styles/ember-theater/variables/schemes/decorative/_paper.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_paper.scss
@@ -1,5 +1,6 @@
 $et-paper-primary-color: #FFFFFF !default;
 $et-paper-secondary-color: #444444 !default;
+$et-paper-highlight-color: #BBBBBB !default;
 
 $et-paper-border-style: $et-default-border-style !default;
 $et-paper-border-color: $et-paper-secondary-color !default;
