--- a/app/styles/ember-theater/variables/schemes/decorative/_transparent.scss
+++ b/app/styles/ember-theater/variables/schemes/decorative/_transparent.scss
@@ -2,6 +2,7 @@ $et-transparent-primary-color: transparent !default;
 $et-transparent-secondary-color: transparent !default;
 $et-transparent-highlight-color: transparent !default;
 $et-transparent-neutral-color: #FFFCC4 !default;
+$et-transparent-hightlight-text-color: #333333 !default;
 
 $et-transparent-border-style: $et-default-border-style !default;
 $et-transparent-border-color: $et-transparent-secondary-color !default;
