style highlighted spaces in text

--- a/app/styles/ember-theater/schemes/decorative/_coastal.scss
+++ b/app/styles/ember-theater/schemes/decorative/_coastal.scss
@@ -73,7 +73,7 @@ $et-text-included: false !default;
       font-family: $et-text-caption-coastal-font-family;
     }
 
-    .et-text-letter {
+    .et-text-body, .et-text-letter {
       @include et-highlight($et-coastal-highlight-color);
     }
   }
