--- a/app/styles/ember-theater/schemes/decorative/_ember.scss
+++ b/app/styles/ember-theater/schemes/decorative/_ember.scss
@@ -74,7 +74,7 @@ $et-text-included: false !default;
       font-family: $et-text-caption-ember-font-family;
     }
 
-    .et-text-letter {
+    .et-text-body, .et-text-letter {
       @include et-highlight($et-ember-highlight-color);
     }
   }
